
PIG-2151: Add annotation to specify output schema in Java UDFs (dvryaboy)

PIG-2230: Improved error message for invalid parameter format (xuitingz via olgan)

PIG-2328: Add builtin UDFs for building and using bloom filters (gates)

PIG-2338: Need signature for EvalFunc (daijy)

PIG-2337: Provide UDF with input schema (xutingz via daijy)

OPTIMIZATIONS

BUG FIXES

PIG-3017: Pig's object serialization should use compression (jcoveney)

PIG-2968: ColumnMapKeyPrune fails to prune a subtree inside foreach (knoguchi via cheolsoo)

PIG-2999: Regression after PIG-2975: BinInterSedesTupleRawComparator secondary sort failing (knoguchi via azaroth)

PIG-2998: Fix TestScriptLanguage and TestMacroExpansion (cheolsoo via jcoveney)

PIG-2975: TestTypedMap.testOrderBy failing with incorrect result (knoguchi via jcoveney)

PIG-2950: Fix tiny documentation error in BagToString builtin (initialcontext via daijy)

PIG-2967: Fix Glob_local test failure for Pig E2E Test Framework (sushantj via daijy)

PIG-1283: COUNT on null bag causes failure (analog.sony via jcoveney)

PIG-2958: Pig tests do not appear to have a logger attached (daijyc via jcoveney)

PIG-2926: TestPoissonSampleLoader failing on rhel environment (jcoveney)

PIG-2985: TestRank1,2,3 fail with hadoop-2.0.x (rohini via azaroth)

PIG-2971: Add new parameter to specify the streaming environment (jcoveney)

PIG-2963: Illustrate command and POPackageLite (cheolsoo via jcoveney)

PIG-2961: BinInterSedesRawComparator broken by TUPLE_number patch (jcoveney)

PIG-2932: Setting high default_parallel causes IOException in local mode (cheolsoo via gates)

PIG-2737: [piggybank] TestIndexedStorage is failing, should be refactored (jcoveney)

PIG-2935: Catch NoSuchMethodError when StoreFuncInterface's new cleanupOnSuccess method isn't implemented. (gates via dvryaboy)

PIG-2920: e2e tests override PERL5LIB environment variable (azaroth)

PIG-2917: SpillableMemoryManager memory leak for WeakReference (haitao.yao via dvryaboy)
